@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.939 2008-09-19 15:39:49 castaglia Exp $
+$Id: NEWS,v 1.940 2008-09-20 20:18:27 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -12,6 +12,7 @@ $Id: NEWS,v 1.939 2008-09-19 15:39:49 castaglia Exp $
 CVS
 --------------------------------
 - Bug 3114 - Bad handling of uid/gid parameters for CreateHome.
+- Bug 3115 - Cross-site request forgery.
 
 1.3.2rc2 - Released 17-Sep-2008
 --------------------------------
